Fix Bugs -deleted the folder where the recipes pages were stored. -create one basic css style sheet and applied styles to all pages

--- a/fried-plamtains.html
+++ b/fried-plamtains.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fried Plantains</title>
-    <link rel="stylesheet" href="pages.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
         <div class="fried-plantains">
@@ -37,9 +37,9 @@
 
      <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="/pages/jollof_rice.html">Jollof Rice</a></li>
-            <li><a href="/pages/rice_and_beans.html">Rice and Beans</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="jollof_rice.html">Jollof Rice</a></li>
+            <li><a href="rice_and_beans.html">Rice and Beans</a></li>
         </ul>
     </nav>
 </body>
