--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="/pages/fried-plamtains.html">Fried Plantains</a></li>
-        <li><a href="pages/jollof_rice.html">Jollof Rice</a></li>
-        <li><a href="/pages/rice_and_beans.html">Rice and Beans</a></li>
+        <li><a href="fried-plamtains.html">Fried Plantains</a></li>
+        <li><a href="jollof_rice.html">Jollof Rice</a></li>
+        <li><a href="rice_and_beans.html">Rice and Beans</a></li>
     </ul>
 </body>
 </html>
