--- a/jollof_rice.html
+++ b/jollof_rice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jollof Rice</title>
-    <link rel="stylesheet" href="pages.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
         <div class="container">
@@ -68,8 +68,8 @@
      <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-           <li><a href="/pages/fried-plamtains.html">Fried Plantains</a></li>
-            <li><a href="/pages/rice_and_beans.html">Rice and Beans</a></li>
+           <li><a href="fried-plamtains.html">Fried Plantains</a></li>
+            <li><a href="rice_and_beans.html">Rice and Beans</a></li>
         </ul>
     </nav>
 </body>
