--- a/rice_and_beans.html
+++ b/rice_and_beans.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rice and Beans</title>
-    <link rel="stylesheet" href="pages.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
         <div class="container">
@@ -38,9 +38,9 @@
         </div>
     <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-           <li><a href="/pages/fried-plamtains.html">Fried Plantains</a></li>
-            <li><a href="pages/jollof_rice.html">Jollof Rice</a></li>
+            <li><a href="index.html">Home</a></li>
+           <li><a href="fried-plamtains.html">Fried Plantains</a></li>
+            <li><a href="jollof_rice.html">Jollof Rice</a></li>
         </ul>
     </nav>
     
